--- a/index.html
+++ b/index.html
@@ -257,6 +257,9 @@
         </div>
       </section>
     </div>
+    <style>
+      @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap");
+    </style>
     <script
       src="https://kit.fontawesome.com/83b63af0da.js"
       crossorigin="anonymous"
