--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
               title="switch to change website theme"
               onclick="toggleBtn()"
             >
-              <span id="spn"></span>
+              <!-- <span id="spn"></span> -->
             </button>
           </div>
         </div>
@@ -245,7 +245,7 @@
               <a href="https://www.facebook.com/login/"
                 ><i class="fa-brands fa-facebook fa-2x"></i></a
               >&nbsp;&nbsp;&nbsp;
-              <a href="http://wa.me/8500833427"
+              <a href="https://wa.me/+918500833427"
                 ><i class="fa-brands fa-whatsapp fa-2x"></i></a
               >&nbsp;&nbsp;&nbsp;
               <a href="https://www.instagram.com/accounts/login/"
