--- a/index.html
+++ b/index.html
@@ -26,15 +26,6 @@
               <li><a href="#Pricing">Pricing</a></li>
               <li><a href="#Contact">Contact</a></li>
             </ul>
-            <button
-              type="button"
-              id="btn"
-              class="theme-button"
-              title="switch to change website theme"
-              onclick="toggleBtn()"
-            >
-              <!-- <span id="spn"></span> -->
-            </button>
           </div>
         </div>
       </div>
@@ -216,13 +207,24 @@
       <section class="Footer">
         <a name="Contact" class="section-name"></a>
         <div class="location">
-          <iframe
-            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d243646.8800628103!2d78.26796120175523!3d17.412627412614803!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bcb99daeaebd2c7%3A0xae93b78392bafbc2!2sHyderabad%2C%20Telangana!5e0!3m2!1sen!2sin!4v1670663190689!5m2!1sen!2sin"
-            style="border: 0; border-radius: 0.75rem; width: 100%; height: 40vh"
-            allowfullscreen=""
-            loading="lazy"
-            referrerpolicy="no-referrer-when-downgrade"
-          ></iframe>
+          <div id="map" class="locate-off">
+            <iframe
+              title="business-location"
+              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d243646.8800628103!2d78.26796120175523!3d17.412627412614803!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bcb99daeaebd2c7%3A0xae93b78392bafbc2!2sHyderabad%2C%20Telangana!5e0!3m2!1sen!2sin!4v1670663190689!5m2!1sen!2sin"
+              style="
+                border: 0;
+                border-radius: 0.75rem;
+                width: 100%;
+                height: 40vh;
+              "
+              allowfullscreen=""
+              loading="lazy"
+              referrerpolicy="no-referrer-when-downgrade"
+            ></iframe>
+          </div>
+          <button id="locate-btn" onclick="showLocation()">
+            Show Location
+          </button>
         </div>
         <div>
           <span class="section-name">Business Name &copy;</span>
