--- a/index.html
+++ b/index.html
@@ -222,7 +222,12 @@
               referrerpolicy="no-referrer-when-downgrade"
             ></iframe>
           </div>
-          <button id="locate-btn" onclick="showLocation()">
+          <button
+            type="button"
+            id="locate-btn"
+            class="locate-btn-style"
+            onclick="showLocation()"
+          >
             Show Location
           </button>
         </div>
